- Gestione accessi private-API di ricerca deleghe - Gestione filtri per gruppi in ricerca deleghe - Gestione accessi public-API per creazione e accettazione deleghe - Gestione gruppi in fase di accettazione deleghe
